Fix value comment right alignment in sidebar.

--- a/application/asset/sass/_screen.scss
+++ b/application/asset/sass/_screen.scss
@@ -3888,7 +3888,8 @@ body.sidebar-open #content {
 .sidebar .meta-group {
     margin-bottom: $spacing-medium;
 
-    .value {
+    .value, 
+    .comment {
         width: 100%;
         padding: $spacing-small 0;
         margin: 0;
